--- a/HazardParser/HazardParser.csproj
+++ b/HazardParser/HazardParser.csproj
@@ -4,11 +4,16 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     </ItemGroup>
+
+    <Target Name="AfterBuildTarget" AfterTargets="CoreBuild">
+        <Copy SourceFiles="windspeed.json" DestinationFolder="$(OutputPath)" />
+    </Target>
 
 </Project>
